<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">sPrint</string>
    <string name="image_logo_des">Logo</string>
    <string name="login_btn_txt">Login</string>
    <string name="google_sign_in_text">Sign In with Google</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="reg_btn">Don\'t have an account? Register</string>
    <string name="logo_desc">Logo</string>
    <string name="registrationBtn">Register</string>
    <string name="retype_password_hint">Re-Type Password</string>
    <string name="signInText">Already have an account? Sign in</string>
    <string name="sign_in_google">Sign In with Google</string>
    <string name="emptyEmail">Input email</string>
    <string name="passwordEmpty">Input Password</string>
    <string name="emailVerText">We have sent a verification e-mail. Verify your credentials and then login.</string>
    <string name="upload_menu_add">ADD</string>
    <string name="done">Done</string>
    <string name="nav_printing_jobs">Printing Jobs</string>
    <string name="nav_upload_file">Choose File</string>
    <string name="nav_available_shops">Available Shops</string>
    <string name="nav_manage_accounts">Manage Accounts</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_other_section">Other</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_privacy_policy">Privacy Policy</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="resendButton">Resend</string>
    <string name="resendText">Didn\'t receive the mail yet?</string>
    <string name="hello_blank_fragment">Hello</string>
    <string name="requestIdToken" tools:ignore="TypographyDashes">566404411615-1jbgkpp3rlb4bn3prldhtb0nfi3sf9fk.apps.googleusercontent.com</string>
    <string name="logout">Login</string>
    <string name="background_url">https://api.androidhive.info/images/nav-menu-header-bg.jpg</string>
    <string name="print_your_files">Print Your Files</string>
    <string name="instructions">Instructions:\n1. Tap on the orange button to start a print job\n2. Click ADD to select a file and tap on DONE\n3. Select your print options and press DONE\n4. Now choose your shop and confirm\n5. sPrint and collect your docs before the shop closes!</string>
    <string name="background_image">background image</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="web_client_id">496914499075-aqhame5fds8d98aec77d58q4ros1su2m.apps.googleusercontent.com</string>
    <string name="arrow_down">Arrow down</string>
    <string name="arrow_up">Arrow up</string>
    <string name="help">Print Job cards show the status of that document in the bottom right corner. These statuses indicate the progress of the job:
\n\n1.	Uploading – Your files are being uploaded
\n\n2.	Waiting – Files have been uploaded and are awaiting the shop’s confirmation
\n\n3.	Printing – The chosen shop has accepted your print job
\n\n4.	Printed – Your documents have been printed and can be collected from the shop
\n\n5.	Rejected – The shop has rejected your print request
\n\n6.	Cancelled – You have cancelled your print job
\n\nNOTE: Print jobs cannot be cancelled once the documents have been printed</string>
    <string name="about_us_text">As Arabella Weir has said, \"I cry at everything, even the length of the queue at Sainsbury\'s\". Only in our case, it’s not Sainsbury’s. It’s the printing shops in our institute. And so, we, an ambitious team of four engineers in the making, have come up with an innovative solution and have decided to share it with you! *insert more buttered up stuff here*.\nNow, seriously.\nMost probably, you or someone you know have stood in a queue for a long time to maybe get just a sheet of paper printed. And man, are those minutes irritating. So, we have come up with an app which would solve this problem. Also, sPrint uses Google’s servers so your data is secure. That’s all folks. :)</string>
    <string name="policy_summary">POLICY SUMMARY</string>
    <string name="pp2">Personal Data collected for the following purposes and using the following services:</string>
    <string name="pp3">\n1. Infrastructure monitoring  \n• Firebase Crash Reporting  \nPersonal Data: various types of Data as specified in the privacy policy of the service    \n2. Managing contacts and sending messages  \n• Firebase Notifications  \nPersonal Data: various types of Data as specified in the privacy policy of the service    \n• Firebase Cloud Messaging  \nPersonal Data: various types of Data as specified in the privacy policy of the service    \n3. Device permissions for Personal Data access  \n• Device permissions for Personal Data access  \nPersonal Data: Storage permission    \n4. Registration and authentication  \n• Firebase Authentication  \nPersonal Data: email address, first name, last name, profile picture and username\n</string>
    <string name="pp4">Detailed information on the processing of Personal Data\n\nPersonal Data is collected for the following purposes and using the following services:   \n\n• Device permissions for Personal Data access  \n\nThis Application requests certain permissions from Users that allow it to access the User\'s device Data as described below.  \n\nDevice permissions for Personal Data access (This Application)  \nThis Application requests certain permissions from Users that allow it to access the User\'s device Data as summarized here and described within this document. \nPersonal Data collected: Storage permission.   \n\n• Managing contacts and sending messages  \nThis type of service makes it possible to manage a database of email contacts, phone contacts or any other contact information to communicate with the User.  These services may also collect data concerning the date and time when the message was viewed by the User, as well as when the User interacted with it, such as by clicking on links included in the message.  \n\nFirebase Cloud Messaging (Google Inc.)  \nFirebase Cloud Messaging is a message sending service provided by Google, Inc. Firebase Cloud Messaging allows the Owner to send messages and notifications to Users across platforms such as Android, iOS, and the web. Messages can be sent to single devices, groups of devices, or specific topics or User segments.  \nPersonal Data collected: various types of Data as specified in the privacy policy of the service.  Place of processing: India – Privacy Policy   \n\n• Registration and authentication  \nBy registering or authenticating, Users allow this Application to identify them and give them access to dedicated services.  Depending on what is described below, third parties may provide registration and authentication services. In this case, this Application will be able to access some Data, stored by these third party services, for registration or identification purposes.  \n\nFirebase Authentication (Google Inc.)  \nFirebase Authentication is a registration and authentication service provided by Google Inc. To simplify the registration and authentication process, Firebase Authentication can make use of third party identity providers and save the information on its platform.  \nPersonal Data collected: email address, first name, last name, profile picture and username.  Place of processing: India – Privacy Policy   \n\n• Infrastructure monitoring  \nThis type of service allows this Application to monitor the use and behaviour of its components so its performance, operation, maintenance and troubleshooting can be improved.  Which Personal Data are processed depends on the characteristics and mode of implementation of these services, whose function is to filter the activities of this Application.  \n\nFirebase Crash Reporting (Google Inc.)  \nFirebase Crash Reporting is a monitoring service provided by Google, Inc.  \nPersonal Data collected: various types of Data as specified in the privacy policy of the service.  Place of processing: India – Privacy Policy   \n\n• Managing contacts and sending messages  \nThis type of service makes it possible to manage a database of email contacts, phone contacts or any other contact information to communicate with the User.  These services may also collect data concerning the date and time when the message was viewed by the User, as well as when the User interacted with it, such as by clicking on links included in the message.  \n\nFirebase Notifications (Google Inc.)  \nFirebase Notifications is a message sending service provided by Google Inc. Firebase Notifications can be integrated with Firebase Analytics to target analytics-based audiences and track opening and conversion events.  \nPersonal Data collected: various types of Data as specified in the privacy policy of the service.  Place of processing: India – Privacy Policy</string>
    <string name="shop_name">Shop Name:</string>
    <string name="location">Location:</string>
    <string name="paper_sizes_available">Paper Sizes Available:</string>
    <string name="colour">Colour:</string>
    <string name="binding">Binding:</string>
    <string name="printing_cost">Printing Cost:</string>
    <string name="binding_cost">Binding Cost:</string>
    <string name="total_cost">Total Cost:</string>
    <string name="chev_right">chev_right</string>
    <string name="queue">Queue:</string>
    <string name="pin">PIN</string>
    <string name="cancel">Cancel</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="password_reset_msg">An email with a password reset link has been sent. Go to the link and reset your password.</string>
    <string name="password_reset_enter_email">Enter your email and we will send you a link to reset your password</string>
    <string name="send">Send</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="change_password">Change Password</string>
    <string name="pages">Pages</string>
    <string name="paper_type">Paper Type</string>
    <string name="color">Color</string>
    <string name="orientation">Orientation</string>
    <string name="copies_default">1</string>
    <string name="copies">Copies</string>
    <string name="page_text_hint">Range (1, 3–5)</string>
    <string name="sides_per_sheet">Sides per sheet</string>
    <string name="remove_button">Remove button</string>
    <string name="ok">OK</string>
    <string name="help_text_1">Status of print jobs:</string>
    <string name="paper_stack_svg">paper stack svg</string>
    <string name="history_svg_file">history svg file</string>
    <string name="file_details">File Details</string>
    <string name="total_pages">Total Pages:</string>
    <string name="printing_details">Printing Details</string>
    <string name="status">Status:</string>
    <string name="date">Date:</string>
    <string name="request_time">Request Time:</string>
    <string name="print_time">Print Time:</string>
    <string name="cost_details">Cost Details</string>
    <string name="cost_per_page">Cost per page:</string>
    <string name="choose_a_pdf_file">- Choose a PDF file -</string>
    <string name="no_ongoing_print_jobs">- No ongoing print jobs -</string>
    <string name="no_print_jobs_yet">- No print jobs yet -</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="password_reset_error">Some error occurred in sending the email. Kindly check your internet connection and try again later.</string>
    <string name="no_shop_match">No shops match your configuration</string>
</resources>