<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_printing_job"
            android:icon="@drawable/ic_description_black_24dp"
            android:title="@string/nav_printing_jobs" />
        <item
            android:id="@+id/nav_start_print"
            android:icon="@drawable/ic_note_add_black_24dp"
            android:title="@string/print_your_files" />

        <item
            android:id="@+id/nav_available_shops"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/nav_available_shops" />
    </group>

    <item android:title="@string/nav_other_section">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/nav_privacy_policy" />
        </menu>
    </item>

</menu>