<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/verifyText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/emailVerText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.251" />

    <Button
        android:id="@+id/resendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resendButton"
        app:layout_constraintLeft_toRightOf="@+id/resendText"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/verifyText"
        style="?android:attr/borderlessButtonStyle"
        android:layout_marginStart="24dp" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        style="?android:attr/borderlessButtonStyle"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="57dp"
        app:layout_constraintTop_toBottomOf="@+id/resendButton" />

    <TextView
        android:id="@+id/resendText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:text="@string/resendText"
        app:layout_constraintTop_toBottomOf="@+id/verifyText"
        app:layout_constraintLeft_toLeftOf="@+id/verifyText" />
</android.support.constraint.ConstraintLayout>